# LZ77

./: CMakeLists.txt  LZ77Compressor.cpp  LZ77Compressor.h  LZ77Descompressor.cpp  LZ77Descompressor.h  main.cpp
ArquivosDescomprimidos/: TEncEntropy_descompress.txt  TEncSearch_descompress.txt  dom_casmurro_descompress.txt  fonte0_descompress.txt  testeDescomprimido.txt
ArquivosParaComprimir/: TEncSearch.txt  teste.txt
Huffman/: HuffmanCompressor.cpp  HuffmanCompressor.h  HuffmanDescompressor.cpp  HuffmanDescompressor.h  ac_bitstream.cpp  ac_bitstream.h  huffman.cpp  huffman.h
